Include GlobalUsings.cs in Directory.Build.props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,4 +11,9 @@
     <PackageReference Include="NUnit"/>
     <PackageReference Include="NUnit3TestAdapter"/>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="$(MSBuildThisFileDirectory)\GlobalUsings.cs">
+      <Link>GlobalUsings.cs</Link>
+    </Compile>
+  </ItemGroup>
 </Project>
