--- a/LeetCode.Numbers/LeetCode.Numbers.csproj
+++ b/LeetCode.Numbers/LeetCode.Numbers.csproj
@@ -2,4 +2,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LeetCode.Common\LeetCode.Common.csproj"/>
   </ItemGroup>
+  <PropertyGroup>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
 </Project>
