--- a/LeetCode.DP/LeetCode.DP.csproj
+++ b/LeetCode.DP/LeetCode.DP.csproj
@@ -2,4 +2,9 @@
   <ItemGroup>
     <ProjectReference Include="..\LeetCode.Common\LeetCode.Common.csproj"/>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="3459. Length of Longest V-Shaped Diagonal Segment\TestCases.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
