--- a/LeetCode/LeetCode.csproj
+++ b/LeetCode/LeetCode.csproj
@@ -2,4 +2,9 @@
   <ItemGroup>
     <ProjectReference Include="..\LeetCode.Common\LeetCode.Common.csproj"/>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="3408. Design Task Manager\LargeExecTopTestData.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
