3321. Find X-Sum of All K-Long Subarrays II

--- a/LeetCode.SlidingWindow/LeetCode.SlidingWindow.csproj
+++ b/LeetCode.SlidingWindow/LeetCode.SlidingWindow.csproj
@@ -2,4 +2,9 @@
   <ItemGroup>
     <ProjectReference Include="..\LeetCode.Common\LeetCode.Common.csproj"/>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="3321. Find X-Sum of All K-Long Subarrays II\TestCases.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
